--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+version: "3.1"
+
 services:
   db:
+    container_name: postgres
     image: postgres:16.8-alpine
     restart: unless-stopped
     environment:
@@ -11,7 +14,20 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./db_scripts/:/docker-entrypoint-initdb.d/
-  
+
+  adminer:
+    depends_on:
+      - db
+    image: adminer
+    restart: unless-stopped
+    ports:
+      - 8900:8080
+    environment:
+      ADMINER_SERVER: postgres
+      ADMINER_USERNAME: pguser
+      ADMINER_PASSWORD: pgpassword
+      ADMINER_DB: templo_belen
+
 volumes:
   db-data:
     driver: local
