--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.1"
 services:
   db:
     container_name: postgres
-    image: postgres:16.8-alpine
+    image: templo-belen-db
     restart: unless-stopped
     environment:
       - POSTGRES_DB=templo_belen
@@ -13,7 +13,6 @@ services:
       - '5432:5432'
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./db_scripts/:/docker-entrypoint-initdb.d/
 
   adminer:
     depends_on:
