--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   db:
     container_name: postgres
     image: templo-belen-db
+    build:
+      context: "postgres/"
+      dockerfile: Dockerfile
     restart: unless-stopped
     environment:
       - POSTGRES_DB=templo_belen
@@ -26,6 +29,24 @@ services:
       ADMINER_USERNAME: pguser
       ADMINER_PASSWORD: pgpassword
       ADMINER_DB: templo_belen
+
+  server:
+    depends_on:
+      - db
+    image: members-sever-app
+    build:
+      dockerfile: Dockerfile
+    ports:
+      - 8000:80
+    environment:
+      POSTGRES_DB: templo_belen
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: pgpassword
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      SECRET_KEY: changeme
+      ALGORITHM: "HS256"
+      ACCESS_TOKEN_EXPIRE_MINUTES: 30
 
 volumes:
   db-data:
