feat: frontendUrl env variable for cors

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,7 @@ POSTGRES_USER=pguser
 POSTGRES_PASSWORD=pgpassword
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+FRONTEND_URL=http://localhost:4200
 
 SECRET_KEY = changeme
 ALGORITHM = "HS256"
