--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       POSTGRES_PASSWORD: pgpassword
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
+      FRONTEND_URL: http://localhost:4200
       SECRET_KEY: changeme
       ALGORITHM: "HS256"
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
