--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.3  # Usa la versión de ruff compatible con tu proyecto
+    rev: v0.4.3
     hooks:
       - id: ruff
 
