--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,4 +39,4 @@ jobs:
         run: isort . --check-only
 
       - name: Run black (check only)
-        run: black . --check --diff || true
+        run: black . --check
