--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     rev: v5.10.1
     hooks:
       - id: isort
-        args: [--check-only]
+        args: [--check-only, --profile=black]
 
   - repo: https://github.com/psf/black
     rev: 24.4.2
