applied flyway db migrations on docker compose

--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
 # Test environment
 
-POSTGRES_DB=test_db
-POSTGRES_USER=testuser
-POSTGRES_PASSWORD=testpass
+POSTGRES_DB=test
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5433
+POSTGRES_PORT=5432
 
 SECRET_KEY=testSecretTest
 ALGORITHM="HS256"
