--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,50 @@
 version: "3.1"
 
 services:
-  db:
-    container_name: postgres
-    image: templo-belen-db
-    build:
-      context: "postgres/"
-      dockerfile: Dockerfile
+  postgres:
+    image: postgres:16
     restart: unless-stopped
     environment:
       - POSTGRES_DB=templo_belen
-      - POSTGRES_USER=pguser
-      - POSTGRES_PASSWORD=pgpassword
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
     ports:
       - '5432:5432'
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d templo_belen"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  adminer:
+  flyway:
+    image: flyway/flyway:11.9
+    command: -url=jdbc:postgresql://postgres:5432/templo_belen -user=postgres -password=password -connectRetries=60 -locations=filesystem:/flyway/sql/migrations,filesystem:/flyway/sql/dev migrate
+    volumes:
+      - ./postgres/db_scripts/migrations:/flyway/sql/migrations
+      - ./postgres/db_scripts/dev:/flyway/sql/dev
     depends_on:
-      - db
-    image: adminer
-    restart: unless-stopped
-    ports:
-      - 8900:8080
-    environment:
-      ADMINER_SERVER: postgres
-      ADMINER_USERNAME: pguser
-      ADMINER_PASSWORD: pgpassword
-      ADMINER_DB: templo_belen
+      postgres:
+        condition: service_healthy
 
   server:
-    depends_on:
-      - db
-    image: members-sever-app
-    build:
-      dockerfile: Dockerfile
+    build: .
     ports:
       - 8000:80
     environment:
       POSTGRES_DB: templo_belen
-      POSTGRES_USER: pguser
-      POSTGRES_PASSWORD: pgpassword
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
       SECRET_KEY: changeme
       ALGORITHM: "HS256"
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+    depends_on:
+      flyway:
+        condition: service_completed_successfully
+    restart: "no"
 
 volumes:
-  db-data:
-    driver: local
+  postgres_data:
