--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
     ports:
-      - '5432:5432'
+      - '5433:5432'
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d test"]
       interval: 10s
@@ -16,10 +16,17 @@ services:
 
   flyway-test:
     image: flyway/flyway:11.9
-    command: -url=jdbc:postgresql://postgres-test:5432/test -user=postgres -password=password -connectRetries=60 -locations=filesystem:/flyway/sql/migrations,filesystem:/flyway/sql/dev migrate
+    command: [
+      "-url=jdbc:postgresql://postgres-test:5432/test",
+      "-user=postgres",
+      "-password=password",
+      "-connectRetries=60",
+      "-locations=filesystem:/flyway/sql/migrations,filesystem:/flyway/sql/dev",
+      "migrate"
+    ]
     volumes:
-      - ./postgres/db_scripts/migrations:/flyway/sql/migrations
-      - ./postgres/db_scripts/dev:/flyway/sql/dev
+      - ./db_scripts/migrations:/flyway/sql/migrations
+      - ./db_scripts/dev:/flyway/sql/dev
     depends_on:
       postgres-test:
         condition: service_healthy
