POST service for family-data and fixing environment variables and flyway

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,8 @@
 # env development
 
 POSTGRES_DB=templo_belen
-POSTGRES_USER=pguser
-POSTGRES_PASSWORD=pgpassword
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
