--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,4 +18,7 @@ repos:
     rev: 24.4.2
     hooks:
       - id: black
-        args: [--check]
+        args: [
+          "--check",
+          "--line-length=120"
+        ]
